# NoraShot

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  roadmap.md
src/norashot/: __init__.py  __main__.py  app.py  config.py  logging_setup.py  paths.py
src/norashot/core/: __init__.py  capture.py  clipboard.py  hotkeys.py  storage.py
src/norashot/ui/: __init__.py  editor.py  selector.py  settings_window.py  tray.py
tests/: test_filename_template.py
